feat: initial mod release

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -1,5 +1,26 @@
 [mod-name]
-title=YOUR MOD TITLE
+title=Space ship notifications
 
 [mod-description]
-description=YOUR MOD DESCRIPTION
+description=Notifies about space platforms arriving/departing from player current planet
+
+[notifications]
+platform-heading-to=Ship __1__ is on the way to __2__
+platform-arrived-at=Ship __1__ has arrived at __2__
+platform-departed-from=Ship __1__ has departed from __2__
+
+[mod-setting-name]
+notification-filter-setting=Notification filter
+
+[mod-setting-description]
+notification-filter-setting=What notifications shall be displayed
+
+[string-mod-setting]
+notification-filter-setting-none=None
+notification-filter-setting-arrivals=Arrivals
+notification-filter-setting-hitchhiking=Hitchhiking
+
+[string-mod-setting-description]
+notification-filter-setting-none=Disable all notifications
+notification-filter-setting-arrivals=Display notifications when any space ships arrives at any planet
+notification-filter-setting-hitchhiking=Display notifications about space ships arriving/departing from player current planet
